[package]
name = "jit"
version = "0.1.0"
authors = ["John Lusty <54030459+jlusty@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.17"
sha-1 = "0.9.1"
hex = "0.4.2"
rand = "0.7.3"
flate2 = "1.0.17"
chrono = "0.4.15"
indexmap = "1.5.1"
